# spiffe-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/spiffe/: spiffe.h  status.h  types.h
proto/: workloadapi.proto
script/: gen_proto.sh
src/: der.cpp  der.h  grpc_client.cpp  grpc_client.h  http2_client.cpp  http2_client.h  spiffe.cpp  status.cpp
src/proto/: workloadapi.h
test/: der_fuzz.cpp  der_test.cpp  grpc_framing_test.cpp  main.cpp
